--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,9 +1,14 @@
 name: Deploy Workflow
 
-on: [push]
+on: deployment
 
 jobs:
-  deploy_dev:
+  deploy-dev:
+    name: Deploy to DEV environment
+    if: ${{ github.event.deployment.environment == 'DEV' }}
+    concurrency: DEV
+    permissions:
+      deployments: write
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/mia-platform/base-pipeline:1
@@ -12,5 +17,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Deploy
+      - name: Update deployment status (pending)
+        if: success()
+        uses: chrnorm/deployment-status@v2
+        with:
+          token: '${{ github.token }}'
+          state: 'pending'
+          deployment-id: ${{ github.event.deployment.id }}
+      - name: Deploy my app
         run: bash ./scripts/deploy.sh
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@v2
+        with:
+          token: '${{ github.token }}'
+          state: 'success'
+          deployment-id: ${{ github.event.deployment.id }}
+      - name: Update deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-status@v2
+        with:
+          token: '${{ github.token }}'
+          state: 'failure'
+          deployment-id: ${{ github.event.deployment.id }}
