--- a/manifests/deploy/environments/DEV/repository-to-deploy.deploy.env
+++ b/manifests/deploy/environments/DEV/repository-to-deploy.deploy.env
@@ -1,1 +1,6 @@
-JOB_ID=change-me-1
+jobId=change-me-2
+TrouxID=de34e7b8-adbb-4bcd-b7df-869c45b86308
+ProjectName=low-touch
+Suffix=secret
+RoleName=mi-rol-principal
+Json={\"key\":\"value\"}
