update Kubernetes configuration for environment DEV from revision main

--- a/manifests/deploy/environments/DEV/repository-to-deploy.deploy.env
+++ b/manifests/deploy/environments/DEV/repository-to-deploy.deploy.env
@@ -1,6 +1,6 @@
-jobId=change-me-2
-TrouxID=de34e7b8-adbb-4bcd-b7df-869c45b86308
-ProjectName=low-touch
-Suffix=secret
-RoleName=mi-rol-principal
-Json={\"key\":\"value\"}
+JOB_ID=change-me
+TROUX_ID=change-me
+PROJECT_NAME=change-me
+SUFFIX=change-me
+ROLE_NAME=change-me
+JSON={"key":"value"}
