update Kubernetes configuration for environment DEV from revision main

--- a/manifests/deploy/environments/DEV/repository-to-deploy.deploy.env
+++ b/manifests/deploy/environments/DEV/repository-to-deploy.deploy.env
@@ -1,6 +1,6 @@
-JOB_ID=change-me
-TROUX_ID=change-me
-PROJECT_NAME=change-me
-SUFFIX=change-me
-ROLE_NAME=change-me
+JOB_ID=co-hdi-secret-manager
+TROUX_ID=de34e7b8-adbb-4bcd-b7df-869c45b86308
+PROJECT_NAME=low-touch
+SUFFIX=secret
+ROLE_NAME=mi-rol-principal
 JSON={\"key\":\"value\"}
